user endpoint added